--- a/public/css/Component/Admin/Admin_Dashboard.css
+++ b/public/css/Component/Admin/Admin_Dashboard.css
@@ -212,7 +212,7 @@
     }
 
     .main-right-bottom-one-left .left p {
-        font-size: 18px;
+        font-size: 16px;
         margin-bottom: 4%;
         letter-spacing: 0.05rem;
         font-weight: 700;
@@ -311,7 +311,7 @@
         flex-direction: column;
     }
 
-    .main-right-bottom-one-right .right .bx-dollar-circle {
+    .main-right-bottom-one-right .right .bx-coin {
         font-size: 70px;
     }
 
@@ -329,8 +329,7 @@
         border: none;
         border-radius: 10px;
         width: 50%;
-        /* height: 15%; */
-        height: 33px;
+        height: 23%;
         font-size: 15px;
         color: var(--background-color-main);
         cursor: pointer;
@@ -471,19 +470,26 @@
         display: flex;
         align-items: center;
         flex-direction: column;
+        box-shadow: var(--box-shadow);
+        border-radius: 10px;
     }
 
-    .main-right-bottom-three-right-left .bx-dollar-circle {
+    .main-right-bottom-three-right-left .bx-coin {
         font-size: 90px;
     }
 
     .main-right-bottom-three-right-left h1 {
         font-size: 18px;
-        margin-bottom: 8%;
+        margin-bottom: 3%;
         font-size: 18px;
-        margin-top: 5%;
+        margin-top: 6%;
         width: 160px;
         text-align: center;
+    }
+
+    .main-right-bottom-three-right-left p{
+        text-align: center;
+        font-size: 16px;
     }
 
     .main-right-bottom-three-right-cont {
