--- a/public/css/Component/Customer/Customer_Request_collect.css
+++ b/public/css/Component/Customer/Customer_Request_collect.css
@@ -186,12 +186,14 @@
                 background-color: var(--background-color-two);
                 color: var(--main-text-color);
                 transition: all 0.6s ease;
+                cursor: pointer !important;
+
             }
 
             .Content-Content select option {
                 font-family: 'Inter', sans-serif;
                 font-size: 15px;
-                cursor: pointer;
+                cursor: pointer !important;
             }
 
             .err {
@@ -371,21 +373,6 @@
         .map_pop.active {
             transform: translate(-50%, -50%) scale(1);
         }
-
-        /* .map_pop {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.1);
-            z-index: 3;
-            display: none;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-        } */
-
 
         .map_pop h3 {
             font-size: 21px;
@@ -595,6 +582,61 @@
 
         .request_success .popup button:hover {
             background: var(--button-hover-green);
+        }
+
+        .radius_error_pop {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.1);
+            z-index: 2;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+        }
+
+        .radius_error_pop {
+            .popup {
+                width: 440px;
+                background: var(--background-color-main);
+                font-family: 'poppins', sans-serif;
+                border-radius: 6px;
+                text-align: center;
+                padding: 0 30px 30px;
+                color: #333;
+                transition: transform 0.4s, top 0.4s;
+            }
+
+            .popup h2 {
+                font-size: 23px;
+                font-weight: 600;
+                margin-bottom: 10px;
+            }
+
+            i {
+                font-size: 90px;
+                margin-top: 30px;
+                margin-bottom: 20px;
+                color: var(--red-color);
+            }
+
+            .popup button {
+                width: 75%;
+                margin-top: 30px;
+                margin-bottom: 5px;
+                padding: 10px 0;
+                background: var(--green-color-one);
+                color: white;
+                border: 0;
+                outline: none;
+                font-size: 18px;
+                border-radius: 4px;
+                cursor: pointer;
+                box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+            }
         }
     }
 
