--- a/public/css/Component/CenterManager/CenterManager_Request_Assinged.css
+++ b/public/css/Component/CenterManager/CenterManager_Request_Assinged.css
@@ -59,7 +59,7 @@
 
     .table-row {
         height: 55px;
-        grid-template-columns: 16% 16% 16% 20% 16% 16% ;
+        grid-template-columns: 14% 15% 15% 14% 14% 14% 14% ;
     }
 
     .table td {
@@ -67,7 +67,7 @@
     }
 
     .table-header {
-        grid-template-columns:  16% 16% 16% 20% 16% 16% ;
+        grid-template-columns: 14% 15% 15% 14% 14% 14% 14%  ;
     }
 
     td img {
@@ -237,149 +237,60 @@
     }
 
 
-    /**/
-    /* .personal-details-popup-box {
+     /*Location popup*/
+     .location_pop {
+        display: flex;
         position: fixed;
-        top: 0;
-        left: 0;
-        background-color: rgba(0, 0, 0, 0.5);
-        z-index: 1;
-        display: none;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        background-color: rgba(0, 0, 0, 0);
+        z-index: 4;
         align-items: center;
         justify-content: center;
-        width: 100%;
-        height: 100%;
-    }
-
-    .personal-details-popup-form {
-        width: 45%;
-        background: white;
-        border-radius: 6px;
-        top: 0;
-        position: relative;
-        text-align: center;
-        padding: 0 30px 30px;
-        color: #333;
-        display: flex;
         flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        transition: transform 0.4s, top 0.4s;
-    }
-
-    .personal-details-popup-form-close {
-        width: 25px;
-        height: 25px;
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        width: 20px;
-        height: 20px;
-        cursor: pointer;
-    }
-
-    .personal-details-popup {
-        display: grid;
-        grid-template-columns: 40% 60%;
-        width: 100%;
-        border-radius: 4px;
-        height: 100%;
-        padding-top: 10px;
-        margin-top: 17px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    }
-
-    .personal-details-right {
-        display: grid;
-        grid-template-columns: 30% 70%;
-    }
-
-    .personal-details-right-labels {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: flex-start;
-        padding-top: 40px;
-        padding-bottom: 50px;
-        padding-left: 25px;
-    }
-
-    .personal-details-right-labels span {
-        margin-bottom: 15px;
-        font-size: 15px;
-        color: #7c7c7d;
-    }
-
-    .personal-details-right-values {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: flex-start;
-        padding-top: 40px;
-        padding-bottom: 50px;
-        padding-left: 32px;
-    }
-
-    .personal-details-right-values span {
-        margin-bottom: 15px;
-        font-size: 15px;
-        color: #767e95;
-        font-weight: 550;
-    }
-
-    .personal-details-left {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 10px;
-        flex-direction: column;
-    }
-
-    .personal-details-left img {
-        width: 150px;
-        height: 150px;
-    }
-
-    .personal-details-left p {
-        margin-top: 5px;
-        font-size: 15px;
-        color: #7c7c7d;
-    }
-
-    .personal-details-left span {
-        color: #767e95;
-        font-weight: 550;
-    }
-
-    .profile-pic {
-        width: 70%;
-        height: auto;
-        border-radius: 50%;
         overflow: hidden;
-        margin-bottom: 8px;
-        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+        transition: transform 0.4s ease-in, background-color 0.4s ease-in;
     }
 
-    .personal-details-topic {
-        font-size: 18px;
-        font-weight: 500;
-        position: relative;
-        margin-inline-end: auto;
-        margin-top: 15px;
+    .location_pop.active {
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    .location_pop_content {
+        width: 700px;
+        padding: 10px;
+        background-color: #f1f2f6;
+        border-radius: 10px;
+        padding: 20px;
+        padding-bottom: 40px;
+        height: 350px;
+        overflow: hidden;
+    }
+
+    .location_pop_map {
+        width: 100;
+        height: 100%;
+        border-radius: 10px;
+    }
+
+    .location_close {
         display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 6px;
     }
 
-    .personal-details-topic::before {
-        content: '';
-        position: absolute;
-        margin-top: 23px;
-        margin-left: 45px;
-        margin-bottom: 15px;
-        height: 3px;
-        width: 45px;
-        background: var(--green-color-one);
-
-    } */
+    .location_close button {
+        background-color: #ff4757;
+        color: #fff;
+        cursor: pointer;
+        border: none;
+        font-size: 16px;
+        border-radius: 5px;
+        width: 85px;
+        height: 28px;
+    }
 
     .overlay {
         position: fixed;
